<resources>
    <string name="app_name">My Application</string>
    <string name="login">Login</string>
    <string name="Connexion">Connexion</string>
    <string name="Inscription">Inscription</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="numéro_de_téléphone">numéro de téléphone</string>
    <string name="nom">nom</string>
    <string name="prenom">Prénom</string>
    <string name="ville">Ville</string>
    <string name="nat">Nationalité</string>
    <string name="Cliquezpourvousconnecter">Cliquez pour vous connecter</string>
    <string name="Cliquezpourvousinscrire">Cliquez pour vous inscrire</string>
    <string name="CliquezpourvousinscrireEmp">Cliquez pour vous inscrire pour employeur</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="nomEnt">Nom de entreprise</string>
    <string name="home">Dashboard</string>
    <string name="Consoffres">Consulter vos offres</string>
    <string name="addoffre">Ajouter une offre</string>
    <string name="Candaccep">Candidatures acceptées</string>
    <string name="publishOffre">Publier offre</string>
    <string name="newOffre">Nouvelle offre</string>
    <string name="nom_de_l_entrepise">nom de l\'entrepise</string>
    <string name="localisation_du_poste">Localisation du poste</string>
    <string name="date_de_d_but_format_jj_mm_aaaa">Date de début format (JJ/MM/AAAA)</string>
    <string name="date_de_fin_au_format_jj_mm_aaaa">Date de fin au format (JJ/MM/AAAA)</string>
    <string name="nom_du_poste">Nom du poste</string>
    <string name="r_mun_ration_par_heure">Rémunération par heure</string>
    <string name="description_du_poste">Description du poste</string>
    <string name="TrvOffres">Trouver des offres</string>
    <string name="CnsCands">Consulter vos candidatures</string>
    <string name="FilOffres">Filtrer vos candidatures</string>
</resources>
